@@ -235,6 +235,7 @@
                 'public/WebMediaPlayerAction.h',
                 'public/WebMediaPlayerClient.h',
                 'public/WebMediaStreamDescriptor.h',
+                'public/WebMediaStreamRegistry.h',
                 'public/WebMediaStreamSource.h',
                 'public/WebMenuItemInfo.h',
                 'public/WebMessagePortChannel.h',
@@ -563,6 +564,7 @@
                 'src/WebMediaPlayerClientImpl.cpp',
                 'src/WebMediaPlayerClientImpl.h',
                 'src/WebMediaStreamDescriptor.cpp',
+                'src/WebMediaStreamRegistry.cpp',
                 'src/WebMediaStreamSource.cpp',
                 'src/WebNamedNodeMap.cpp',
                 'src/WebNetworkStateNotifier.cpp',
